--- a/src/App.css
+++ b/src/App.css
@@ -16,61 +16,6 @@
   height: 100%;
 }
 
-.projects-grid {
-  display: flex;
-}
-
-/* Resume Page css */
-.resume-right-col {
-  background: #27221F;
-  color: white;
-  padding: 2em;
-}
-
-/* contact page css */
-
-.contact-body {
-  margin: auto;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  padding-top: 2em;
-}
-
-.contact-grid {
-  text-align: center;
-  justify-content: center;
-  width: 80%;
-  height: 550px;
-  background: white;
-  color: black;
-  margin-bottom: 20px;
-}
-
-.contact-grid h2 {
-  font-family: 'Anton', sans-serif;
-}
-
-.contact-grid p {
-  font-family: 'Oxygen', sans-serif;
-  font-weight: bold;
-}
-
-.contact-grid hr {
-  border-top: 5px dotted black;
-  width: 50%;
-  margin: auto;
-}
-
-.contact-list i {
-  font-size: 66px;
-  padding-right: 5rem;
-}
-
-
-/* contact page css */
-
 .avatar-img {
   height: 250px;
   padding-top: 5em;
@@ -102,15 +47,46 @@
   padding: 1em;
 }
 
-.social-links {
-  display: flex;
-  justify-content: space-between;
+.header-body {
+  margin: auto;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 2em;
+}
+
+.header-grid {
+  text-align: center;
+  justify-content: center;
+  /* width: 80%; */
+  /* height: 550px; */
+  background: white;
+  color: black;
+  /* margin-bottom: 20px; */
+}
+
+.table-grid {
+  justify-content: center;
+  text-align: center;
+}
+
+.header-grid h2 {
+  font-family: 'Anton', sans-serif;
+}
+
+.header-grid p {
+  font-family: 'Oxygen', sans-serif;
+  font-weight: bold;
+}
+
+.header-grid hr {
+  border-top: 5px dotted black;
   width: 50%;
   margin: auto;
 }
 
-.social-links i {
-  color: white;
-  font-size: 5em;
-  padding: 8px;
+.header-list i {
+  font-size: 66px;
+  padding-right: 5rem;
 }
